--- a/Json.Object/Json.Tests/Json.Tests.csproj
+++ b/Json.Object/Json.Tests/Json.Tests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Json.Object\Json.Object.csproj" />
+  </ItemGroup>
+
 </Project>
