--- a/Json.Object/Json.Object/Json.Object.csproj
+++ b/Json.Object/Json.Object/Json.Object.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-	<PropertyGroup>
-		<CodeAnalysisRuleSet>juniormind.ruleset</CodeAnalysisRuleSet>
-	</PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+	<PropertyGroup>
+		<CodeAnalysisRuleSet>juniormind.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+
 
 </Project>
