Implemented Any class with tests

--- a/Json.Object/Json.Tests/Json.Tests.csproj
+++ b/Json.Object/Json.Tests/Json.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Json.Object\Json.Object.csproj" />
+    <ProjectReference Include="..\Json.Object\Json.Parser.csproj" />
   </ItemGroup>
 
 </Project>
