--- a/IntegerArray/IntegerArray.Tests/IntegerArray.Tests.csproj
+++ b/IntegerArray/IntegerArray.Tests/IntegerArray.Tests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IntegerArray\IntegerArray.csproj" />
+  </ItemGroup>
+
 </Project>
