Changed implementation of ObjectArray GetEnumerator to use yield
Added more tests for ObjectArray class with IEnumerator interface

--- a/IntegerArray/IntegerArray/IntegerArray.csproj
+++ b/IntegerArray/IntegerArray/IntegerArray.csproj
@@ -11,4 +11,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+	<ItemGroup>
+	  <Compile Remove="ObjectIEnumerator.cs" />
+	</ItemGroup>
+
 </Project>
