Refactored Remove and RemoveAt methods

--- a/IntegerArray/IntegerArray.Tests/IntegerArray.Tests.csproj
+++ b/IntegerArray/IntegerArray.Tests/IntegerArray.Tests.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="List.Tests.cs" />
+    <Compile Remove="ObjectArrayCollection.Tests.cs" />
+    <Compile Remove="ObjectIEnumerator.Tests.cs" />
+    <Compile Remove="SortedList.Tests.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
