--- a/DecoratorPattern/DecoratorPattern.Tests/DecoratorPattern.Tests.csproj
+++ b/DecoratorPattern/DecoratorPattern.Tests/DecoratorPattern.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Remove="Program.Tests.cs" />
+    <Compile Remove="TextFile.Tests.cs" />
   </ItemGroup>
 
   <ItemGroup>
