--- a/DecoratorPattern/DecoratorPattern/DecoratorPattern.csproj
+++ b/DecoratorPattern/DecoratorPattern/DecoratorPattern.csproj
@@ -3,13 +3,17 @@
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<IsPackable>false</IsPackable>
-		<CodeAnalysisRuleSet>juniormind.ruleset</CodeAnalysisRuleSet>
+		<CodeAnalysisRuleSet></CodeAnalysisRuleSet>
 	</PropertyGroup>
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <None Remove="juniormind.ruleset" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3">
